<resources>
    <string name="app_name">Libra</string>
    <string name="login_button">登录</string>
    <string name="welcome_text">欢迎使用 Libra</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="phone_hint">手机号</string>
    <string name="input_auth_code">输入验证码</string>
    <string name="weight_text">总重</string>
    <string name="value_text">总价</string>
    <string name="date_text">日期</string>
    <string name="time_text">时间</string>
    <string name="order_code">订单号</string>
    <string name="delete_order_btn">删除订单</string>
    <string name="customer_text">顾客</string>
    <string name="product_name">商品名称</string>
    <string name="product_value_text_hint">金额</string>
    <string name="add_production_image">Add Production</string>
    <string name="title_today_income">今日营业额</string>
    <string name="title_today_order_num">今日订单数</string>
    <string name="about_us_text">关于我们</string>

    <string name="test_value">$15</string>
    <string name="test_order_code">880611</string>
    <string name="test_weight">15.0 kg</string>
    <string name="test_phone_num">15665827713</string>
    <string name="test_time">08:06</string>
    <string name="test_date">06 11</string>
    <string name="test_store_owner">Developer: DateBro</string>
    <string name="test_store_contact">sdudatebro@gmail.com</string>
    <string name="test_today_order_num">16</string>
    <string name="test_text_today_income">$880611</string>
    <string name="setting_text">设置</string>
    <string name="exit_text">退出</string>
    <string name="testProductId">1</string>
    <string name="text_product_id">ID</string>
    <string name="text_product_name">商品名称</string>
    <string name="text_product_value">商品价格</string>
</resources>
